<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >
    
    <!-- 导航栏 -->  
     <include layout="@layout/nav_integral_rule_layout"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/integral_rule_register"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/integral_rule_sign"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/integral_rule_help"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/integral_rule_returnbook_inadvance"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/integral_rule_overdue_book"/>
    
    <Button 
        android:id="@+id/btn_integral_rule_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_margin="5dp"
        android:text="@string/btn_integral_rule_sign"/>

</LinearLayout>
