<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >
    <!-- 导航栏 -->  
     <include layout="@layout/nav_set_layout"/>
    
    <Button 
        android:id="@+id/btn_my_info_set_reset_password"
        android:layout_marginTop="20dp"
        style="@style/setButton"
        
        android:text="@string/btn_my_info_set_reset_password"/>
    
    <Button 
        android:id="@+id/btn_my_info_set_feedback"
        style="@style/setButton"
        android:text="@string/btn_my_info_set_feedback"/>
    <Button 
        android:id="@+id/btn_my_info_set_version_check"
        style="@style/setButton"
        android:text="@string/btn_my_info_set_version_check"/>
    <Button 
        android:id="@+id/btn_my_info_set_about"
        style="@style/setButton"
        android:text="@string/btn_my_info_set_about"/>
    

</LinearLayout>
