<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >
     <!-- 导航栏 -->  
    <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_bar"
     android:background="@color/theme_blue">
     
     <Button 
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/back"
         android:layout_marginTop="@dimen/nav_marginTop_10"
         android:layout_marginLeft="@dimen/nav_marginLeft_10"/>
     
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_my_info_creditScore"
         android:textColor="@color/white"
         android:textSize="@dimen/nav_textsize_16"
         android:layout_marginTop="@dimen/nav_marginTop_10"
         android:layout_marginLeft="@dimen/nav_marginLeft_13"/>
	 </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/common_user"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/sliver_user"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/gold_user"/>
    <ProgressBar 
        android:id="@+id/pb_myinfo_crditscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="当前: 完成注册，积5分"/>

</LinearLayout>
