<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:orientation="vertical" >
    <TextView 
        style="@style/nav_main_style"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/iv_my_info_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            
            android:src="@drawable/dog"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView 
                android:id="@+id/tv_my_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王大锤"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
            <TextView 
                android:id="@+id/tv_my_info_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="西安交通大学"
                android:textSize="16sp"
                android:textColor="@color/gray"
                />
            <TextView 
                android:id="@+id/tv_my_info_creditRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="信用等级: 5"
                android:textSize="16sp"
                android:textColor="@color/gray"
                />
        </LinearLayout>
        
    </LinearLayout>
    <Button 
        android:id="@+id/btn_my_info_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        
        android:text="@string/btn_my_info_publish"/>
    <Button 
        android:id="@+id/btn_my_info_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/btn_my_info_order"/>
    <Button 
        android:id="@+id/btn_my_info_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/btn_my_info_remind"/>
    <Button 
        android:id="@+id/btn_my_info_creditScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/btn_my_info_creditScore"/>
    <Button 
        android:id="@+id/btn_my_info_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btn_my_info_set"/>
    <Button 
        android:id="@+id/btn_my_info_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:text="@string/btn_my_info_exit"/>
    

</LinearLayout>
