<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <!-- 导航栏 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_bar"
        android:background="@color/theme_blue" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nav_marginLeft_10"
            android:layout_marginTop="@dimen/nav_marginTop_10"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nav_marginLeft_13"
            android:layout_marginTop="@dimen/nav_marginTop_10"
            android:text="@string/release_message"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_textsize_16" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/nav_marginLeft_10"
        android:layout_marginTop="@dimen/nav_marginTop_10"
        android:text="备注："
        android:textColor="@color/black"
        android:textSize="@dimen/nav_textsize_16" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/nav_marginTop_10"
        android:gravity="center_vertical|top"
        android:hint="写下你想说的话吧……"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textSize="@dimen/nav_textsize_16" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
      <Button
       android:id="@+id/btn_sure"
       android:layout_width="100dp"
       android:layout_height="32dp"
       android:layout_marginLeft="15dp"
       android:layout_marginTop="30dp"
       android:background="@drawable/button_blue"
       android:text="@string/btn_sure"
       android:textColor="@color/white"
       android:textSize="16sp" />
      
      <Button
       android:id="@+id/btn_direct_release"
       android:layout_width="110dp"
       android:layout_height="32dp"
       android:layout_marginLeft="75dp"
       android:layout_marginTop="30dp"
       android:background="@drawable/button_blue"
       android:text="@string/direct_release"
       android:textColor="@color/white"
       android:textSize="16sp" />
         
    </LinearLayout>

</LinearLayout>