<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/light_gray">
 <RelativeLayout 
     android:layout_width="fill_parent"
     android:layout_height="@dimen/nav_bar"
     android:background="@color/theme_blue">
     
     <Button 
         android:id="@+id/back"
         style="@style/navBackButtonStyle"/>
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/nav_marginLeft_13"
         android:layout_marginTop="@dimen/nav_marginTop_10"
         android:text="@string/user_login"
         android:textColor="@color/white"
         android:textSize="@dimen/nav_textsize_20" />

 </RelativeLayout>

 
 <ImageView
     android:id="@+id/iv_logo"
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:layout_gravity="center_vertical|center_horizontal"
     android:src="@drawable/main_logo"
     android:layout_marginTop="20dp" />
 
 <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_marginLeft="@dimen/input_box_marginLeft_5"
     android:layout_marginRight="@dimen/input_box_marginLeft_5"
     android:layout_marginTop="20dp"
     android:background="@drawable/input_box"
     android:orientation="horizontal" >

     <ImageView
         android:layout_width="23dp"
         android:layout_height="25dp"
         android:layout_marginLeft="@dimen/input_box_marginLeft_5"
         android:layout_gravity="center_vertical"
         android:contentDescription="用户图片"
         android:src="@drawable/user" />

     <EditText
         android:id="@+id/et_username"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ems="10"
         android:hint="请输入邮箱或者用户名"
         android:background="@color/transparent"
         android:inputType="textEmailAddress|text"
         android:textColor="@color/black"
         android:textSize="@dimen/nav_textsize_16" >

         <requestFocus />
     </EditText>

 </LinearLayout>
 
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="@dimen/input_box_marginLeft_5"
      android:layout_marginRight="@dimen/input_box_marginLeft_5"
      android:layout_marginTop="10dp"
      android:background="@drawable/input_box"
      android:orientation="horizontal" >

      <ImageView
          android:layout_width="23dp"
          android:layout_height="25dp"
          android:layout_marginLeft="@dimen/input_box_marginLeft_5"
          android:layout_gravity="center_vertical"
          android:contentDescription="密码图片"
          android:src="@drawable/password" />

     <EditText
          android:id="@+id/et_password"
          android:layout_width="210dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="0dp"
          android:hint="请输入密码"
          android:background="@color/transparent"
          android:textColor="@color/black" 
          android:textSize="@dimen/nav_textsize_16"
          android:inputType="textPassword"/>    

      <Button
          android:id="@+id/btn_forget_psd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="right|center_vertical"
          android:layout_marginLeft="0dp"
          android:layout_marginTop="0dp"
          android:background="@color/transparent"
          android:text="@string/forget_password"
          android:textColor="@color/theme_blue"
          android:textSize="@dimen/nav_textsize_13" />

  </LinearLayout>
  
   <LinearLayout
      android:layout_width="@dimen/single_input_width"
      android:layout_height="@dimen/single_input_height"
      android:layout_marginLeft="@dimen/input_box_marginLeft_5"
      android:layout_marginTop="10dp"
      android:orientation="horizontal" >

      <CheckBox
          android:id="@+id/cb_remember_psd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          
          android:text="@string/remember_password" />

   </LinearLayout>

   <Button
       android:id="@+id/btn_login_now"
       android:layout_width="match_parent"
       android:layout_height="32dp"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:background="@color/theme_blue"
       android:text="@string/login_now"
       android:textColor="@color/white"
       android:textSize="@dimen/nav_textsize_18" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_gravity="bottom|center_vertical|center_horizontal"
       android:layout_weight="0.1"
       android:gravity="bottom"
       android:orientation="vertical" >

   <Button
       android:id="@+id/btn_goto_register"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/transparent"
       android:text="还没有账户？注册账户"
       android:textColor="@color/theme_blue"
       android:textSize="@dimen/nav_textsize_16" />
   </LinearLayout>

</LinearLayout>
